@@ -1,1 +1,7 @@
-Don't forget to check msix config for icon's path in pubspec.yaml. The path might be not right as we change the location path.
+// Don't forget to check msix config for icon's path in pubspec.yaml. The path might be not right as we change the location path.
+
+### CREATE MSIX PACKAGE
+// Creating an MSIX installer
+// To create a MSIX installer, run the following command:
+// ****** NOTE: Don't forget to change version in pubspec.yml before create package
+PS c:\src\flutter_project> dart run msix:create
